# cpplib

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  TODO.md  hexdump.cpp  test.cpp
cmake/: toolchain.i686-mingw-w64.cmake  toolchain.mingw-w64.cmake.in  toolchain.x86_64-mingw-w64.cmake
graphics/: plasma.cpp
include/cpp/: lib_algorithm  lib_bit  lib_chrono  lib_concepts  lib_debug  lib_math  lib_scope  lib_system_error  lib_type_traits
include/lib/: cli.hpp  cstring.hpp  ecs.hpp  flags.hpp  list.hpp  literals.hpp  localized_string.hpp  ptr.hpp  ref.hpp  types.hpp
include/lib/application/: keyboard.hpp
include/lib/bus/: filter.hpp  manager.hpp  message.hpp  tag.hpp
include/lib/cli/: command.hpp  driver.cpp  driver.hpp  interface.cpp  interface.hpp  param.hpp
include/lib/data/: buffer.hpp  codec.cpp  codec.hpp  hash.hpp  serialize.hpp  stream.hpp
include/lib/debug/: compiler.hpp  features.hpp  hexdump.hpp  instance_id.hpp  instances_counter.hpp  os.hpp  platform.hpp
include/lib/ecs/: component.hpp  component.inl  entity.hpp  entity.inl  manager.hpp  manager.inl
include/lib/file/: ini.cpp  ini.hpp
include/lib/impl/application/: default_keyboard.cpp  default_keyboard.hpp
include/lib/impl/cli/: cstdio_driver.cpp  cstdio_driver.hpp
include/lib/impl/codec/: base64.cpp  base64.hpp  xorkey.cpp  xorkey.hpp
include/lib/impl/hash/: sha1.cpp  sha1.hpp
include/lib/impl/packets/: ping_counter.cpp  ping_counter.hpp
include/lib/impl/packets/sync/: client.cpp  client.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp  types.hpp
include/lib/impl/serialize/: ptr.hpp  std_contiguous_container.hpp  std_tuple.hpp
include/lib/impl/socket/: tcp.hpp
include/lib/impl/socket/tcp/: client.hpp  server.hpp  server_client.hpp
include/lib/impl/stream/: buffer.cpp  buffer.hpp  data.cpp  data.hpp  debug.cpp  debug.hpp  fifo.cpp  fifo.hpp  file.cpp  file.hpp  stdio.cpp  stdio.hpp
include/lib/impl_posix/application/: termios_display.cpp  termios_display.hpp  termios_keyboard.cpp  termios_keyboard.hpp
include/lib/impl_posix/cli/: termios_driver.cpp  termios_driver.hpp
include/lib/impl_posix/socket/: tcp.hpp  unix.hpp
include/lib/impl_posix/socket/tcp/: base.cpp  base.hpp  client.cpp  client.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp
include/lib/impl_posix/socket/unix/: base.cpp  base.hpp  client.cpp  client.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp
include/lib/impl_windows/socket/: tcp.hpp
include/lib/impl_windows/socket/tcp/: base.cpp  base.hpp  client.cpp  client.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp
include/lib/impl_windows/system/: error.cpp  error.hpp
include/lib/packets/: aggregator.hpp  handler.cpp  handler.hpp  packet.hpp
include/lib/socket/: client.cpp  client.hpp  server.cpp  server.hpp  server_client.cpp  server_client.hpp  socket.hpp
include/lib/system/: error.cpp  error.hpp  serialize_error.cpp  serialize_error.hpp
include/lib/test/: main.hpp  unit.cpp  unit.hpp
include/lib/tl/: carray.hpp  delegate.hpp  linkable.hpp  listener.hpp  noncopyable.hpp  result.hpp
include/lib/utils/: ansi_colors.hpp  case_string.cpp  case_string.hpp  cp437.hpp  enum.hpp  ids_pool.hpp  log_support.hpp  string.hpp  updateable.hpp  value.hpp  voynich.hpp
include/test/lib/: bus.cpp  bus.hpp  cli.cpp  cli.hpp  ecs.cpp  ecs.hpp  flags.cpp  flags.hpp  strutils.cpp  strutils.hpp
include/test/lib/file/: ini.cpp  ini.hpp
include/test/lib/impl/codec/: base64.cpp  base64.hpp
include/test/lib/impl/hash/: sha1.cpp  sha1.hpp
include/test/lib/impl/socket/: tcp.cpp  tcp.hpp
include/test/lib/impl_posix/application/: termios_keyboard.cpp  termios_keyboard.hpp
include/test/lib/impl_posix/socket/: unix.cpp  unix.hpp
include/test/lib/packets/: handler.cpp  handler.hpp
include/test/lib/tl/: carray.cpp  carray.hpp  delegate.cpp  delegate.hpp  listener.cpp  listener.hpp
include/test/lib/utils/: case_string.cpp  case_string.hpp  enum.cpp  enum.hpp  ids_pool.cpp  ids_pool.hpp  value.cpp  value.hpp
